# picture-downloader-ai

./: .editorconfig  .env.example  README.md  main.py  pyproject.toml  temp.py
utils/: __init__.py  ai.py  cli_args.py  download.py  env_settings.py  logger.py  logging_config.py  timing.py  url.py  url_test.py
